added some test to PCU page

--- a/portfolioitems/PCU.html
+++ b/portfolioitems/PCU.html
@@ -76,7 +76,7 @@
                 <img id="portfolioItemPageImage" src="../img/PCU/DSC_1856.JPG" />   
                 <div class="span8 offset1">
                     <p id="portfolioItemPageText">
-                        This is a transparent display version of one of the PCUs I worked on. You can see the pneumatically driven valves (aluminum, on the bottom), the solenoid driven valves (the black region in the middle), and the enclosed electronics. 
+                        This is a transparent display version of one of the PCUs I worked on. You can see the pneumatically driven valves (aluminum, on the bottom), the solenoid driven valves (the black region in the middle), and the enclosed electronics. I performed the system layout, detail design and testing for multiple variants of pneumatic control units.
                     </p>
                 </div>
             </div>
