added some test to PCU page

--- a/portfolioitems/SwitchPlate.html
+++ b/portfolioitems/SwitchPlate.html
@@ -72,7 +72,7 @@
         
 		<div class="row">
 			<div class="span10 offset1">
-				<img id="portfolioItemPageImage" src="../img/SwitchPlate/AASControls.jpg" />	
+				<img id="portfolioItemPageImage" src="../img/SwitchPlate/AASControls.JPG" />	
                 <div class="span8 offset1">
                     <p id="portfolioItemPageText">
                         This was a small but interesting project. We needed to create a place on the dash of a passenger car for controls for a prototype suspension system. I used a 3D scan of the dash make a plate that would fit into a pocket in the dash and match the curvature. The part was fabricated with a 3D printer. 
