--- a/portfolioitems/OptimumK.html
+++ b/portfolioitems/OptimumK.html
@@ -59,7 +59,7 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
           		</a>
-				<a class="brand pull-left" id="siteTitle" href="index.html">Clay Corbett</a>
+				<a class="brand pull-left" id="siteTitle" href="portfolio.html">Clay Corbett</a>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li class="active">
