--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
           		</a>
-				<a class="brand pull-left" id="siteTitle" href="portfolio.html">Clay Corbett</a>
+				<a class="brand pull-left" id="siteTitle" href="index.html">Clay Corbett</a>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li class="active">
-							<a id="categoryLinksSelected" href="portfolio.html">PORTFOLIO</a>
+							<a id="categoryLinksSelected" href="index.html">PORTFOLIO</a>
 						</li>
-						<li><a id="categoryLinks" href="docs/corbett - resume - web.pdf">RESUME</a></li>
-						<li><a id="categoryLinks" href="contact.html">CONTACT</a></li>
+						<li><a id="categoryLinks" href="docs/2024-04 - Resume Web.pdf">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
