--- a/portfolioitems/SwitchPlate.html
+++ b/portfolioitems/SwitchPlate.html
@@ -59,14 +59,13 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
           		</a>
-				<a class="brand pull-left" id="siteTitle" href="../portfolio.html">Clay Corbett</a>
+				<a class="brand pull-left" id="siteTitle" href="../index.html">Clay Corbett</a>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li class="active">
-							<a id="categoryLinksSelected" href="../portfolio.html">PORTFOLIO</a>
+							<a id="categoryLinksSelected" href="../index.html">PORTFOLIO</a>
 						</li>
-						<li><a id="categoryLinks" href="../docs/corbett - resume - web.pdf">RESUME</a></li>
-						<li><a id="categoryLinks" href="../contact.html">CONTACT</a></li>
+						<li><a id="categoryLinks" href="../docs/2024-04 - Resume Web.pdf">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,7 +77,7 @@
 
 	<div class="container">
         <span>←</span>
-        <a href="../portfolio.html">Portfolio</a>
+        <a href="../index.html">Portfolio</a>
         <span class="divider">/</span>
         <span>Switch Plates</span>
         <br />
